--- a/appState.json
+++ b/appState.json
@@ -23,7 +23,7 @@
         "children": [],
         "isRemovable": true,
         "filePath": "cs480Dynamo/lambda.js",
-        "code": "let AWS = require('aws-sdk');\nconst ddb = new AWS.DynamoDB.DocumentClient();\n\nexports.handler = function (event, context, callback) {\n\n    var randomToken = sha1(Math.random());\n\n    ddb.put({\n        TableName: 'users',\n        Item: { \n            'username': event.username,\n            'password': event.password,\n            'authtoken': randomToken}\n    }).promise().then(function (data) {\n        callback(null, { \"message\": \"user: \"+event.username+\" pass \"+event.password+\" returned data: \"+data });\n        //your logic goes here\n    }).catch(function (err) {\n        callback(null, { \"message\": \"something went wrong \"+err });\n        //handle error\n    });\n\n    \n\n\n\n}",
+        "code": "let AWS = require('aws-sdk');\nconst ddb = new AWS.DynamoDB.DocumentClient();\n\nexports.handler = function (event, context, callback) {\n\n    var randomToken = \"something\"//sha1(Math.random());\n\n    ddb.put({\n        TableName: 'users',\n        Item: { \n            'username': event.username,\n            'password': event.password,\n            'authtoken': randomToken}\n    }).promise().then(function (data) {\n        callback(null, { \"message\": \"user: \"+event.username+\" pass \"+event.password+\" returned data: \"+data });\n        //your logic goes here\n    }).catch(function (err) {\n        callback(null, { \"message\": \"something went wrong \"+err });\n        //handle error\n    });\n\n    \n\n\n\n}",
         "triggers": [
           {
             "resourceName": "apigusEast1testcreateDynamoUserpost",
@@ -55,7 +55,7 @@
         "children": [],
         "isRemovable": true,
         "filePath": "cs480Dynamo/dynamoDemoLogin.js",
-        "code": "let AWS = require('aws-sdk');\nconst ddb = new AWS.DynamoDB.DocumentClient();\n\nexports.handler = function (event, context, callback) {\n\n    ddb.get({\n        TableName: 'users',\n        Key: { 'username': event.username }\n    }).promise().then(function (data) {\n        if(event.password == data.password){\n            callback(null, { \"message\": data.authtoken });\n        }else{\n            allback(null, { \"message\": \"bad password\" });\n        }\n    }).catch(function (err) {\n        \n    callback(null, { \"message\": \"some weird error: \"+err });\n    });\n\n\n\n}",
+        "code": "let AWS = require('aws-sdk');\nconst ddb = new AWS.DynamoDB.DocumentClient();\n\nexports.handler = function (event, context, callback) {\n\n    ddb.get({\n        TableName: 'users',\n        Key: { 'username': event.username }\n    }).promise().then(function (data) {\n        if (event.password == data.password) {\n            callback(null, { \"message\": data.authtoken });\n        } else {\n            callback(null, { \"message\": \"bad password\" + JSON.stringify(data) });\n        }\n    }).catch(function (err) {\n\n        callback(null, { \"message\": \"some weird error: \" + err });\n    });\n\n\n\n\n}",
         "triggers": [
           {
             "resourceName": "apigusEast1testloginDynamoUserpost",
@@ -134,7 +134,7 @@
         "type": "DynamoDB",
         "config": {
           "mode": 1,
-          "operation": "get",
+          "operation": "query",
           "table": {
             "arn": "arn:aws:dynamodb:us-east-1:997927943405:table/users",
             "name": "users",
@@ -146,11 +146,10 @@
             "mode": 1
           },
           "parameters": {
-            "Key": {
-              "username": "namehere"
-            },
+            "Key": {},
             "Item": {},
-            "ExpressionAttributeValues": {}
+            "ExpressionAttributeValues": {},
+            "KeyConditionExpression": ""
           },
           "triggerParams": {},
           "validator": {
@@ -223,7 +222,7 @@
     "repoUrl": "https://github.com/Diamondrubix/WildFire",
     "platform": "AWS",
     "platformRegions": {},
-    "lastSave": 1556475280075
+    "lastSave": 1556488378550
   },
   "VCS_STATE": {
     "provider": "GitHub",
